--- a/StudentPerformanceproject.ipynb
+++ b/StudentPerformanceproject.ipynb
@@ -1843,7 +1843,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "We can see here student who have complted the test preparation have performed better."
+    "We can see here student who have completed the test preparation have performed better."
    ]
   }
  ],
